--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -45,17 +45,24 @@ ul {
   height: 24px;
   margin: 0 auto;
 }
-
-.main-section {
+.popup-section {
   display: flex;
   flex-direction: column;
   margin: 1rem;
-  width: 10rem;
+  width: 20rem;
+}
+
+#main-section {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  width: 20rem;
 }
 .menu-button {
   background-color: transparent;
   color: var(--color-text);
   border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 .menu-button:hover {
   background-color: var(--color-accent-blue);
