--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -75,8 +75,8 @@ input {
 
 /* 아이디 */
 #plant-img {
-  width: 24px;
-  height: 24px;
+  width: 2.4rem;
+  height: 2.4rem;
   margin: 0 auto;
   display: flex;
 }
@@ -142,6 +142,8 @@ input {
 /* li */
 .date-item {
   padding: 0.1rem 0;
+  display: flex;
+  align-items: center;
 }
 
 /* div */
