add: 아이디 설정 영어 설정

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -72,6 +72,10 @@ input {
   display: flex;
   flex-direction: row;
 }
+.col-layout {
+  display: flex;
+  flex-direction: column;
+}
 /* 레이아웃 */
 
 /* 아이디 */
@@ -190,7 +194,8 @@ li.on-count {
 }
 
 /* span */
-.short-cut-text {
+.short-cut-text,
+.sub-en-text {
   color: var(--color-dark-grey);
 }
 
